fixed sidebar overflow problem for safari

--- a/assets/main.css
+++ b/assets/main.css
@@ -55,6 +55,7 @@ div.main {
 	margin-top: 20px;
 	margin-bottom: 20px;	
 	z-index:1;
+	overflow: hidden;
 }
 
 div.content {
